[gd_scene load_steps=15 format=3 uid="uid://b0tie75ccwpc1"]

[ext_resource type="Texture2D" uid="uid://dgoijdayt3h8h" path="res://Scenes/Menus/MenuPrincipal_reduce.png" id="1_5yyhg"]
[ext_resource type="Script" uid="uid://b2nav58dnt6px" path="res://Scenes/Menus/menu_principal.gd" id="1_ee117"]
[ext_resource type="FontFile" uid="uid://enqqfjpwfd6j" path="res://Scenes/Fonts/mini_pixel-7.ttf" id="3_bly56"]
[ext_resource type="AudioStream" uid="uid://bl1xvcck5ytap" path="res://Music/MenuPrincipal/musica_menu.ogg" id="3_rkpcb"]
[ext_resource type="Texture2D" uid="uid://nqdc824lirj" path="res://Scenes/Menus/EscudoIcon.png" id="5_win7y"]

[sub_resource type="LabelSettings" id="LabelSettings_ee117"]
font = ExtResource("3_bly56")
font_size = 300
font_color = Color(0, 0.8235294, 0.15686275, 1)
shadow_size = 15
shadow_color = Color(0, 0, 0, 0.9843137)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.06, 0.09, 0.06, 0.98)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.2, 0.6, 0.25, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[sub_resource type="AtlasTexture" id="AtlasTexture_qlige"]
atlas = ExtResource("5_win7y")
region = Rect2(469, 0, 469, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_0kgmx"]
atlas = ExtResource("5_win7y")
region = Rect2(1407, 0, 469, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_qybmx"]
atlas = ExtResource("5_win7y")
region = Rect2(1876, 0, 469, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_1g5cc"]
atlas = ExtResource("5_win7y")
region = Rect2(0, 512, 469, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_7rm68"]
atlas = ExtResource("5_win7y")
region = Rect2(469, 512, 469, 512)

[sub_resource type="AtlasTexture" id="AtlasTexture_j3ntv"]
atlas = ExtResource("5_win7y")
region = Rect2(938, 512, 469, 512)

[sub_resource type="SpriteFrames" id="SpriteFrames_sg3qn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlige")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0kgmx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qybmx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1g5cc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7rm68")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j3ntv")
}],
"loop": true,
"name": &"default",
"speed": 7.0
}]

[node name="MenuPrincipal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 438.0
offset_top = 298.0
offset_right = 438.0
offset_bottom = 298.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ee117")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.224
anchor_top = -0.312
anchor_right = 0.77300006
anchor_bottom = 0.684
offset_left = -66.608
offset_top = 0.27999878
offset_right = 127.88611
offset_bottom = 97.03998
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_5yyhg")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = -363.0
offset_top = -234.0
offset_right = 316.0
offset_bottom = -109.0
text = "ESPErancito"
label_settings = SubResource("LabelSettings_ee117")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = -382.0
offset_top = 260.0
offset_right = -116.0
offset_bottom = 423.0

[node name="BotonJugar" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_bly56")
theme_override_font_sizes/font_size = 60
text = "JUGAR"

[node name="BotonControles" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_bly56")
theme_override_font_sizes/font_size = 60
text = "CONTROLES"

[node name="BotonMusica" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_bly56")
theme_override_font_sizes/font_size = 60
text = "MUSICA: ON"

[node name="BotonCreditos" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_bly56")
theme_override_font_sizes/font_size = 60
text = "CRÃ‰DITOS"

[node name="BotonSalir" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_bly56")
theme_override_font_sizes/font_size = 60
text = "SALIR"

[node name="PanelControles" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_left = 0.18
anchor_top = 0.3
anchor_right = 0.18
anchor_bottom = 0.3
offset_left = -280.0
offset_top = -280.0
offset_right = 280.0
offset_bottom = 280.0
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="MarginContainer" type="MarginContainer" parent="PanelControles"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 24
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 24

[node name="VBox" type="VBoxContainer" parent="PanelControles/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="TituloControles" type="Label" parent="PanelControles/MarginContainer/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.3, 0.9, 0.35, 1)
theme_override_fonts/font = ExtResource("3_bly56")
theme_override_font_sizes/font_size = 52
text = "Controles"
horizontal_alignment = 1

[node name="ListaControles" type="RichTextLabel" parent="PanelControles/MarginContainer/VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/default_color = Color(0.9, 0.95, 0.9, 1)
theme_override_fonts/normal_font = ExtResource("3_bly56")
theme_override_font_sizes/normal_font_size = 38
bbcode_enabled = true
text = "[center]Movimiento: [b]Flechas izquierda y derecha[/b]
Saltar: [b]Espacio[/b] o [b]Enter[/b]
Correr: [b]Flechas + Ctrl[/b]
Atacar: [b]X[/b]
Bloquear / Parry: [b]Z[/b]
Interactuar: [b]E[/b]
Pausa: [b]ESC[/b][/center]"
fit_content = true
scroll_active = false

[node name="BotonVolver" type="Button" parent="PanelControles/MarginContainer/VBox"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_bly56")
theme_override_font_sizes/font_size = 42
text = "Volver"

[node name="MusicMenu" type="AudioStreamPlayer" parent="." groups=["music"]]
stream = ExtResource("3_rkpcb")

[node name="IconoCarga" type="AnimatedSprite2D" parent="."]
position = Vector2(1204, 483)
scale = Vector2(0.35287845, 0.35287848)
sprite_frames = SubResource("SpriteFrames_sg3qn")
frame_progress = 0.32862547

[node name="Label" type="Label" parent="IconoCarga"]
offset_left = -144.52567
offset_top = 229.54076
offset_right = 148.47433
offset_bottom = 316.54077
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 63
text = "Cargando..."
